--- a/_posts/kotlin/2020-11-23-list-set.md
+++ b/_posts/kotlin/2020-11-23-list-set.md
@@ -2,7 +2,7 @@
 title: Kotlin List와 Set에 관한 메모 
 author: jaepark
 date: 2020-11-23 14:39:00 +0900
-categories: [Kotlin, Data Structure]
+categories: [Kotlin]
 tags: [list and set]
 pin: true
 img_path: '/assets/img'
