--- a/_posts/kotlin/2020-11-23-list-set.md
+++ b/_posts/kotlin/2020-11-23-list-set.md
@@ -4,7 +4,7 @@ author: jaepark
 date: 2020-11-23 14:39:00 +0900
 categories: [Kotlin]
 tags: [list and set]
-pin: true
+pin: false
 img_path: '/assets/img'
 ---
 ## **List**
