--- a/_posts/kotlin/2020-11-23-list-set.md
+++ b/_posts/kotlin/2020-11-23-list-set.md
@@ -3,7 +3,7 @@ title: Kotlin List와 Set에 관한 메모
 author: jaepark
 date: 2020-11-23 14:39:00 +0900
 categories: [Kotlin]
-tags: [list and set]
+tags: [list, set]
 pin: false
 img_path: '/assets/img'
 ---
